compile_tests/expected/control_flow.stderr
error: labels not supported
 --> compile_tests/src/control_flow.rs:7:22
  |
7 |             continue 'label;
  |                      ^^^^^^

error: labels not supported
 --> compile_tests/src/control_flow.rs:8:19
  |
8 |             break 'label;
  |                   ^^^^^^

error: break expressions not supported
 --> compile_tests/src/control_flow.rs:9:19
  |
9 |             break 0;
  |                   ^

error: labels not supported
 --> compile_tests/src/control_flow.rs:6:9
  |
6 |         'label: while true {
  |         ^^^^^^

error: not allowed outside loops
  --> compile_tests/src/control_flow.rs:11:9
   |
11 |         continue;
   |         ^^^^^^^^

error: not allowed outside loops
  --> compile_tests/src/control_flow.rs:12:9
   |
12 |         break;
   |         ^^^^^